# westiestats

./: .dockerignore  Application.hs  Dockerfile  Foundation.hs  Import.hs  Makefile  Model.hs  cabal.config  docker-entrypoint.sh  downloader.hs  stack.yaml  westiestats.cabal
Handler/: Admin.hs  AutoComplete.hs  Competitor.hs  Event.hs  Home.hs  Search.hs
Import/: DeriveJSON.hs
Model/: Division.hs  Person.hs  Placement.hs  Result.hs
app/: devel.hs
config/: keter.yml  routes  settings.yml
messages/: en.msg
src/: CBPrelude.hs  Competitor.hs  Database.hs  Model.hs
src/Model/: External.hs  Location.hs
templates/: admin.hamlet  competitor.hamlet  competitor.julius  competitor.lucius  default-layout-wrapper.hamlet  event.hamlet  event_list.hamlet  footer.hamlet  homepage.hamlet  homepage.julius  navbar.hamlet  navbar.julius  navbar.lucius  search.hamlet
tools/: fetch_data.py  merge.py
