name:              westiestats
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app, src
    exposed-modules: Application
                     CBPrelude
                     Competitor
                     Database
                     Foundation
--                     Handler.Admin
                     Handler.Comment
                     Handler.Common
                     Handler.Competitor
                     Handler.Event
                     Handler.Home
--                     Handler.Search
                     Import
                     Import.DeriveJSON
                     Import.NoFoundation
                     Model
                     Model.External
                     Settings
                     Settings.StaticFiles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-static
                 , yesod-form
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 , ixset
                 , HTTP
                 , blaze-markup
                 , acid-state
                 , safecopy
                 , mtl
                 , path-pieces
                 , conduit-extra

executable         westiestats
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , westiestats

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

executable          downloader
    if flag(library-only)
        Buildable: False

    main-is:            downloader.hs
    hs-source-dirs:     .
    build-depends:      aeson
                      , base
                      , classy-prelude
                      , parallel-io
                      , time
                      , optparse-applicative
                      , bytestring
                      , westiestats

    ghc-options:        -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommonSpec
                       Handler.HomeSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , westiestats
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
